// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AirportRowItem Snapshot should render the AirportRowItem Component without icon and onPress successfully 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  hitSlop={
    {
      "left": 20,
      "right": 20,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    className="flex-1 ml-3"
  >
    <Text
      className="mb-1"
      color="text-70"
      type="body3"
    >
      Rating
    </Text>
    <Text
      color="text-100"
      type="body2"
    >
      5 Stars
    </Text>
  </View>
</View>
`;

exports[`AirportRowItem Snapshot should render the AirportRowItem successfully 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "left": 20,
      "right": 20,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    color="#000000"
    name="star"
    size={20}
    testID="mocked-material-community-icon"
  />
  <View
    className="flex-1 ml-3"
  >
    <Text
      className="mb-1"
      color="text-70"
      type="body3"
    >
      Rating
    </Text>
    <Text
      color="text-100"
      type="body2"
    >
      5 Stars
    </Text>
  </View>
  <View
    color="#000000"
    name="chevron-right"
    size={20}
    testID="mocked-material-community-icon"
  />
</View>
`;
